--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,20 @@
 	top: 40px;
 }
 
+.redondo{
+	width: 200px;
+	height: 200px;
+	margin:auto;
+	border: 8px white solid;
+	border-radius: 50%;
+	border-spacing: 5px;
+	/* border-top-left-radius: 60px;
+	border-top-right-radius: 60px;
+	border-bottom-right-radius: 60px;
+	border-bottom-left-radius: 60px; */
+}
+
+
 .table{
 	width: 50%;
 	margin-left: 25%;
@@ -545,7 +559,18 @@ padding: 10px 0;
 	.modal-lg {
 		width: 1140px;
 	}
+
+	
 }
+
+@media (max-width:1200px) {
+
+	#gu{
+		position: relative;
+		top: -0px;
+	}
+}
+
 
 /* Media
 ---------------------------------- */
@@ -729,6 +754,11 @@ padding: 10px 0;
 	.header.navbar-fixed-top {
 		position: absolute;
 	}
+
+	#intro{
+		font-size: 25px;
+	}
+
 }
 
 /* Fixed Header
@@ -758,6 +788,20 @@ padding: 10px 0;
 	.fixed-header-on .site-slogan {
 		display: none;
 	}
+}
+
+@media (max-width:991px){
+
+	.bloque{
+		margin-bottom: 75px;
+	}
+
+	.redondo{
+		width: 300px;
+		height: 300px;
+	}
+
+
 }
 
 /* Blocks/Widgets
@@ -1001,12 +1045,12 @@ th, td{
 #telefono:hover , #direccion:hover{
 	color: rgba(219, 10, 97, 0.78);
 }
-
+/* 
 #serv{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	
-}
+} */
 
 .texto{
 	text-align:center;
@@ -1014,18 +1058,6 @@ th, td{
 	margin-bottom: 20px;
 }
 
-.redondo{
-	width: 200px;
-	height: 200px;
-	margin:auto;
-	border: 8px white solid;
-	border-radius: 50%;
-	border-spacing: 5px;
-	/* border-top-left-radius: 60px;
-	border-top-right-radius: 60px;
-	border-bottom-right-radius: 60px;
-	border-bottom-left-radius: 60px; */
-}
 
 #bandera{
 	position: relative;
