--- a/css/style.css
+++ b/css/style.css
@@ -801,6 +801,10 @@ padding: 10px 0;
 		height: 300px;
 	}
 
+	.texto{
+		font-size: 30px;
+	}
+
 
 }
 
@@ -1035,7 +1039,6 @@ th, td{
 	text-align: left;
 	margin-left: 20px;
 	cursor: pointer;
-	color:#333333;
 }
 
 #direccion{
