--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ text-align:center;
 	background-color: #BB0A53;
 	border: 0;
 }
-
+a[href^=tel] { color: inherit; text-decoration: none; }
 
 /* Collapse
 ---------------------------------- */
@@ -1038,8 +1038,6 @@ th, td{
 	text-align: left;
 	margin-left: 20px;
 	cursor: pointer;
-	color: inherit; 
-	text-decoration: none;
 }
 
 #direccion{
@@ -1048,8 +1046,7 @@ th, td{
 }
 
 #telefono:hover , #direccion:hover{
-	/* color: rgba(219, 10, 97, 0.78); */
-	color: blue;
+	color: rgba(219, 10, 97, 0.78);
 }
 /* 
 #serv{
